Fix ::selection colors in dark mode

--- a/src/styles/_prism.scss
+++ b/src/styles/_prism.scss
@@ -3,4 +3,12 @@
 
 @media (prefers-color-scheme: dark) {
   @import "~prismjs/themes/prism-tomorrow";
+
+  pre[class*=language],
+  code[class*=language] {
+    &::selection,
+    ::selection {
+      background-color: var(--selection-background);
+    }
+  }
 }
