--- a/src/styles/themes/_dark.css
+++ b/src/styles/themes/_dark.css
@@ -1,6 +1,7 @@
 :root {
   --body-background: #484848;
   --body-color: #c3c4c7;
+  --selection-background: #4a5056;
   --links-color: #688bb4;
   --links-hover: #6b94c4;
   --header-primary: #c3c4c7;
